[package]
name = "misty-vm"
version = "0.1.3"
edition = "2021"
description = "A rust library for building view models."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misty-vm-macro = { version = "0.1.2", path = "../misty-vm-macro" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
thread_local = "1.1.7"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
